--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 // use in button elements to reset styles before adding your own.
 @mixin button-reset {
   background-image: none;
@@ -79,7 +80,7 @@
     $context: $context * 1px;
   }
 
-  @return $pixels / $context * 1em;
+  @return math.div($pixels, $context) * 1em;
 }
 
 @mixin visually-hidden {
