--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -44,6 +44,20 @@
   overflow: hidden;
 }
 
+// possible replacement for above, no IE support
+// Apply this to flex items to size them correctly with gutters
+// Make sure to use exclusive media queries, otherwise the nth child selector will bleed into the next media query
+@mixin flex-grid-item($columns: 4, $gutter: 10px) {
+  margin: #{math.div($gutter, 2)};
+  &:nth-child(#{$columns}n - #{$columns - 1}) {
+    margin-left: 0;
+  }
+  &:nth-child(#{$columns}n) {
+    margin-right: 0;
+  }
+  flex: 0 0 calc((100% / #{$columns}) - (#{$gutter * ($columns - 1)} / #{$columns}));
+}
+
 // for centered elements with a max-width, see codepen for example. https://codepen.io/bdnorris/pen/ydeMgj
 @mixin default-sizing($max) {
   margin-left: $mobile-margin;
