--- a/_mixins.scss
+++ b/_mixins.scss
@@ -21,7 +21,7 @@
     margin-left: $desktop-margin;
     margin-right: $desktop-margin;
   }
-  @include breakpoint ($max up) {
+  @include breakpoint($max, up) {
     margin-left: auto;
     margin-right: auto;
     padding-left: $desktop-margin;
@@ -32,7 +32,7 @@
 // New version of the above using max()
 @mixin max-width-variable($max: $global-max-width, $block-padding: 1em) {
   padding: $block-padding unquote("max(1.5rem, 50vw - " + $max + " / 2)");
-  @include breakpoint ($max up) {
+  @include breakpoint ($max, up) {
     padding: $block-padding unquote("max(2rem, 50vw - " + $max + " / 2)");
   }
 }
@@ -81,7 +81,7 @@
     @media screen and (max-width: #{$str}) {
       @content;
     }
-  } @elseif ($direction == "to") {
+  } @else if ($direction == "to") {
     @media screen and (min-width: #{$str}) and (max-width: #{map-get($breakpoints, $lastValue)}) {
       @content;
     }
