--- a/_typography.scss
+++ b/_typography.scss
@@ -79,10 +79,15 @@ p, .p {
   line-height: 1.25;
   font-size: em(16);
   max-width: 32em;
-  text-wrap: pretty;
   @include breakpoint(large) {
     line-height: 1.375;
   }
+}
+
+@supports (text-wrap: pretty) {
+	p, .p {
+		text-wrap: pretty;
+	}
 }
 
 sup {
