--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,4 +1,6 @@
 @use 'sass:math';
+@use 'sass:list';
+
 // use in button elements to reset styles before adding your own.
 @mixin button-reset {
   background-image: none;
@@ -83,9 +85,9 @@ $breakpoints: (
   // get the first value passed to the mixin
   $value: nth($values, 1);
   // Direction of media query (up, down, or to)
-  $direction: if(length($values) > 1, nth($values, 2), false);
+  $direction: if(list.length($values) > 1, nth($values, 2), false);
   // if to, then get the third value
-  $lastValue: if(length($values) > 2, nth($values, 3), false);
+  $lastValue: if(list.length($values) > 2, nth($values, 3), false);
   // get the actual matching value from the list
   $str: map-get($breakpoints, $value);
   // if it's not in the list, then let's just used what was passed directly
