--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,5 +1,6 @@
 @use 'sass:math';
 @use 'sass:list';
+@use 'sass:map';
 
 // use in button elements to reset styles before adding your own.
 @mixin button-reset {
@@ -89,7 +90,7 @@ $breakpoints: (
   // if to, then get the third value
   $lastValue: if(list.length($values) > 2, nth($values, 3), false);
   // get the actual matching value from the list
-  $str: map-get($breakpoints, $value);
+  $str: map.get($breakpoints, $value);
   // if it's not in the list, then let's just used what was passed directly
   @if ($str) {
     $str: $str;
@@ -102,7 +103,7 @@ $breakpoints: (
       @content;
     }
   } @else if ($direction == "to") {
-    @media screen and (min-width: #{$str}) and (max-width: #{map-get($breakpoints, $lastValue)}) {
+    @media screen and (min-width: #{$str}) and (max-width: #{map.get($breakpoints, $lastValue)}) {
       @content;
     }
   } @else {
