--- a/_typography.scss
+++ b/_typography.scss
@@ -1,5 +1,9 @@
+@use 'colors';
+@use 'variables';
+@use 'mixins';
+
 h1, h2, h3, h4, h5, h6 {
-  color: $text;
+  color: colors.$text;
 }
 
 h1, h2 {
@@ -10,76 +14,76 @@ h1, h2 {
 // http://typecast.com/blog/a-more-modern-scale-for-web-typography
 
 h1, .h1 {
-  font-family: $sans;
+  font-family: variables.$sans;
   font-weight: 800;
   line-height: 1.25;
   letter-spacing: -1.5px;
   font-size: em(32);
-  @include breakpoint(large) {
+  @include mixins.breakpoint(large) {
     font-size: em(40);
     line-height: 1.125;
   }
-  @include breakpoint(xlarge) {
+  @include mixins.breakpoint(xlarge) {
     font-size: em(48);
     line-height: 1.05;
   }
 }
 
 h2, .h2 {
-  font-family: $sans;
+  font-family: variables.$sans;
   font-weight: 800;
   line-height: 1.153;
   letter-spacing: -0.5px;
   font-size: em(26);
-  @include breakpoint(large) {
+  @include mixins.breakpoint(large) {
     font-size: em(32);
     line-height: 1.25;
   }
-  @include breakpoint(xlarge) {
+  @include mixins.breakpoint(xlarge) {
     font-size: em(36);
   }
 }
 
 h3, .h3 {
-  font-family: $sans;
+  font-family: variables.$sans;
   font-weight: 800;
   line-height: 1.36;
   letter-spacing: 0;
   font-size: em(22);
-  @include breakpoint(large) {
+  @include mixins.breakpoint(large) {
     font-size: em(24);
     line-height: 1.25;
   }
-  @include breakpoint(xlarge) {
+  @include mixins.breakpoint(xlarge) {
     font-size: em(28);
   }
 }
 
 h4, .h4 {
-  font-family: $sans;
+  font-family: variables.$sans;
   font-weight: 800;
   line-height: 1.111;
   letter-spacing: 0.25px;
   font-size: em(18);
-  color: $text-light;
-  @include breakpoint(large) {
+  color: colors.$text-light;
+  @include mixins.breakpoint(large) {
     font-size: em(18);
     line-height: 1.222;
   }
 }
 
 a {
-  color: $clickable;
+  color: colors.$clickable;
   text-decoration: none;
 }
 
 p, .p {
   font-weight: 400;
-  color: $text;
+  color: colors.$text;
   line-height: 1.25;
   font-size: em(16);
   max-width: 32em;
-  @include breakpoint(large) {
+  @include mixins.breakpoint(large) {
     line-height: 1.375;
   }
 }
