--- a/components/_index.scss
+++ b/components/_index.scss
@@ -1,5 +1,5 @@
-@import 'content';
-@import 'header';
-@import 'footer';
-@import 'navigation';
-@import 'forms';
+@use 'content';
+@use 'header';
+@use 'footer';
+@use 'navigation';
+@use 'forms';
