--- a/_mixins.scss
+++ b/_mixins.scss
@@ -2,6 +2,8 @@
 @use 'sass:list';
 @use 'sass:map';
 
+@use 'variables';
+
 // use in button elements to reset styles before adding your own.
 @mixin button-reset {
   background-image: none;
@@ -17,18 +19,18 @@
 
 // for centered elements with a max-width, see codepen for example. https://codepen.io/bdnorris/pen/ydeMgj
 @mixin default-sizing($max) {
-  margin-left: $mobile-margin;
-  margin-right: $mobile-margin;
+  margin-left: variables.$mobile-margin;
+  margin-right: variables.$mobile-margin;
   max-width: $max;
   @include breakpoint(large) {
-    margin-left: $desktop-margin;
-    margin-right: $desktop-margin;
+    margin-left: variables.$desktop-margin;
+    margin-right: variables.$desktop-margin;
   }
   @include breakpoint($max, up) {
     margin-left: auto;
     margin-right: auto;
-    padding-left: $desktop-margin;
-    padding-right: $desktop-margin;
+    padding-left: variables.$desktop-margin;
+    padding-right: variables.$desktop-margin;
   }
 }
 
@@ -50,7 +52,7 @@
 
 // https://css-tricks.com/snippets/sass/px-to-em-functions/
 // Use Ems, but no math to do when working from design programs
-@function em($pixels, $context: $browser-context) {
+@function em($pixels, $context: variables.$browser-context) {
   @if (unitless($pixels)) {
     $pixels: $pixels * 1px;
   }
@@ -76,19 +78,19 @@
 
 $breakpoints: (
   small: 0,
-  medium: $medium,
-  large: $large,
-  xlarge: $xlarge,
-  xxlarge: $xxlarge
+  medium: variables.$medium,
+  large: variables.$large,
+  xlarge: variables.$xlarge,
+  xxlarge: variables.$xxlarge
 );
 
 @mixin breakpoint($values...) {
   // get the first value passed to the mixin
-  $value: nth($values, 1);
+  $value: list.nth($values, 1);
   // Direction of media query (up, down, or to)
-  $direction: if(list.length($values) > 1, nth($values, 2), false);
+  $direction: if(list.length($values) > 1, list.nth($values, 2), false);
   // if to, then get the third value
-  $lastValue: if(list.length($values) > 2, nth($values, 3), false);
+  $lastValue: if(list.length($values) > 2, list.nth($values, 3), false);
   // get the actual matching value from the list
   $str: map.get($breakpoints, $value);
   // if it's not in the list, then let's just used what was passed directly
