--- a/components/_content.scss
+++ b/components/_content.scss
@@ -1,5 +1,8 @@
+@use '../mixins';
+@use '../variables';
+
 // * Could be used for layout styles
 
 article {
-  @include default-sizing($xlarge);
+  @include mixins.default-sizing(variables.$xlarge);
 }
