--- a/home.scss
+++ b/home.scss
@@ -1,13 +1,13 @@
-@import 'variables';
-@import 'colors';
-@import 'vendor/index';
-@import 'mixins';
-@import 'functions';
-@import 'base';
-@import 'animations';
-@import 'webfonts';
-@import 'typography';
-@import 'buttons';
-@import 'icons';
+@use 'variables';
+@use 'colors';
+@use 'vendor/index';
+@use 'mixins';
+@use 'functions';
+@use 'base';
+@use 'animations';
+@use 'webfonts';
+@use 'typography';
+@use 'buttons';
+@use 'icons';
 
-@import 'pages/home';
+@use 'pages/home';
