--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,12 @@
-@import 'variables';
-@import 'colors';
-@import 'vendor/index';
-@import 'mixins';
-@import 'functions';
-@import 'base';
-@import 'animations';
-@import 'webfonts';
-@import 'typography';
-@import 'buttons';
-@import 'icons';
-@import 'components/index';
+@use 'variables';
+@use 'colors';
+@use 'vendor/index';
+@use 'mixins';
+@use 'functions';
+@use 'base';
+@use 'animations';
+@use 'webfonts';
+@use 'typography';
+@use 'buttons';
+@use 'icons';
+@use 'components/index' as components;
