--- a/_functions.scss
+++ b/_functions.scss
@@ -17,10 +17,10 @@
     $encoded: '';
     $slice: 2000;
     $index: 0;
-    $loops: ceil(str-length($svg) / $slice);
+    $loops: math.ceil(str.length($svg) / $slice);
 
     @for $i from 1 through $loops {
-        $chunk: str-slice($svg, $index, $index + $slice - 1);
+        $chunk: str.slice($svg, $index, $index + $slice - 1);
         $chunk: str-replace($chunk, '"', "'");
         $chunk: str-replace($chunk, '<', '%3C');
         $chunk: str-replace($chunk, '>', '%3E');
@@ -41,10 +41,10 @@
 /// @param {String} $replace ('') - New value
 /// @return {String} - Updated string
 @function str-replace($string, $search, $replace: '') {
-    $index: str-index($string, $search);
+    $index: str.index($string, $search);
 
     @if $index {
-        @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+        @return str.slice($string, 1, $index - 1) + $replace + str-replace(str.slice($string, $index + str.length($search)), $search, $replace);
     }
 
     @return $string;
