--- a/_functions.scss
+++ b/_functions.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@use 'sass:string';
 @use 'variables';
 
 ////
@@ -20,7 +21,7 @@
     $loops: math.ceil(str.length($svg) / $slice);
 
     @for $i from 1 through $loops {
-        $chunk: str.slice($svg, $index, $index + $slice - 1);
+        $chunk: string.slice($svg, $index, $index + $slice - 1);
         $chunk: str-replace($chunk, '"', "'");
         $chunk: str-replace($chunk, '<', '%3C');
         $chunk: str-replace($chunk, '>', '%3E');
