--- a/_functions.scss
+++ b/_functions.scss
@@ -18,7 +18,7 @@
     $encoded: '';
     $slice: 2000;
     $index: 0;
-    $loops: math.ceil(str.length($svg) / $slice);
+    $loops: math.ceil(string.length($svg) / $slice);
 
     @for $i from 1 through $loops {
         $chunk: string.slice($svg, $index, $index + $slice - 1);
@@ -42,10 +42,10 @@
 /// @param {String} $replace ('') - New value
 /// @return {String} - Updated string
 @function str-replace($string, $search, $replace: '') {
-    $index: str.index($string, $search);
+    $index: string.index($string, $search);
 
     @if $index {
-        @return str.slice($string, 1, $index - 1) + $replace + str-replace(str.slice($string, $index + str.length($search)), $search, $replace);
+        @return string.slice($string, 1, $index - 1) + $replace + str-replace(string.slice($string, $index + string.length($search)), $search, $replace);
     }
 
     @return $string;
