--- a/_base.scss
+++ b/_base.scss
@@ -21,6 +21,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden; // keeps animations inside the viewport
+
   &.locked {
     // add this class with javascript when you launch a modal or something, to prevent background scrolling
     overflow: hidden;
@@ -28,7 +29,8 @@ body {
 }
 
 // responsive images
-img, picture {
+img,
+picture {
   display: block;
   width: 100%;
   height: auto;
@@ -40,7 +42,10 @@ html {
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
