add hanging-punctuation to paragraphs

--- a/_typography.scss
+++ b/_typography.scss
@@ -103,6 +103,7 @@ p,
   font-size: functions.em(16);
   max-width: 32em;
   margin-block: 0.25em 0.333em;
+  hanging-punctuation: first allow-end;
 
   // if the next sibling is not a p
   &:not(:has(+ p)) {
